@@ -575,37 +575,6 @@ Square Root</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
-                <child>
-                  <widget class="GtkHBox" id="hbox3">
-                    <property name="visible">True</property>
-                    <child>
-                      <widget class="GtkCheckButton" id="cycle_toggle">
-                        <property name="label" translatable="yes">Cycle assigned colors</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="has_tooltip">True</property>
-                        <property name="tooltip" translatable="yes">Whether or not to use assigned colors for unassigned protocols</property>
-                        <property name="use_underline">True</property>
-                        <property name="xalign">0.44999998807907104</property>
-                        <property name="draw_indicator">True</property>
-                        <signal name="toggled" handler="on_cycle_toggle_toggled"/>
-                      </widget>
-                      <packing>
-                        <property name="fill">False</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                  </widget>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="padding">5</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
               </widget>
               <packing>
                 <property name="position">1</property>
